# GPhotoMerger

./: LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
src/gphotosmerger/: __init__.py  exif_writer.py  input_validation.py  logconfig.py  main.py  metadata.py  processor.py
