[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68", "wheel"]

[project]
dependencies = [
  "tqdm==4.67.2",
  "piexif==1.1.3",
  "mutagen==1.47.0",
  "pillow>=10.0.0",
]
description = "Google Photos Takeout EXIF writer"
name = "gphotosmerger"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.scripts]
gphotosmerger = "gphotosmerger.main:main"

[tool.setuptools]
packages = ["gphotosmerger"]

[tool.setuptools.package-dir]
"" = "src"
