[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68", "wheel"]

[project]
dependencies = [
  "tqdm==4.67.2",
  "piexif==1.1.3",
  "mutagen==1.47.0",
  "pillow>=10.0.0",
]
description = "Google Photos Takeout EXIF writer"
name = "gphotosmerger"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.scripts]
gphotosmerger = "gphotosmerger.main:main"

[tool.setuptools]
packages = ["gphotosmerger"]

[tool.setuptools.package-dir]
"" = "src"

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
